test(ReviewControllerTest): исправить ошибки checkstyle (Leading braces) — заменить text blocks на JSON-строки